--- a/gui/mint-bill.ui
+++ b/gui/mint-bill.ui
@@ -1067,4 +1067,50 @@
     <property name="text">Is u seker u wil die staat of state e-pos?</property>
     <property name="transient-for">main-window</property>
   </object>
+  <object class="GtkWindow" id="database-password-window">
+    <property name="accessible-role">alert-dialog</property>
+    <property name="default-height">150</property>
+    <property name="default-width">220</property>
+    <property name="destroy-with-parent">True</property>
+    <property name="modal">True</property>
+    <property name="resizable">False</property>
+    <property name="title">Database Password</property>
+    <property name="transient-for">main-window</property>
+    <child>
+      <object class="GtkGrid" id="database-password-grid">
+        <property name="column-spacing">5</property>
+        <property name="halign">center</property>
+        <property name="margin-bottom">10</property>
+        <property name="margin-end">10</property>
+        <property name="margin-start">10</property>
+        <property name="margin-top">10</property>
+        <property name="orientation">vertical</property>
+        <property name="row-spacing">5</property>
+        <property name="valign">center</property>
+        <child>
+          <object class="GtkEntry" id="database-password-entry">
+            <property name="max-length">25</property>
+            <property name="placeholder-text">Database password...</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="column-span">3</property>
+              <property name="row">0</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="database-password-button">
+            <property name="css-classes">save_button</property>
+            <property name="css-name">save_button</property>
+            <property name="label">Stoor</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="column-span">3</property>
+              <property name="row">2</property>
+            </layout>
+          </object>
+        </child>
+      </object>
+    </child>
+  </object>
 </interface>
